# rosidl_buffer_backends-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
cuda_buffer_backend/: README.md
cuda_buffer_backend/cuda_buffer/: CHANGELOG.rst  CMakeLists.txt  package.xml
cuda_buffer_backend/cuda_buffer/include/cuda_buffer/: cuda_buffer.hpp  cuda_buffer_api.hpp  cuda_buffer_handle.hpp  cuda_buffer_impl.hpp  cuda_buffer_ipc_manager.hpp  cuda_error.hpp  visibility_control.h
cuda_buffer_backend/cuda_buffer/src/: cuda_buffer.cpp  cuda_buffer_ipc_manager.cpp  host_endpoint_manager.cpp
cuda_buffer_backend/cuda_buffer/test/: test_cuda_buffer.cpp
cuda_buffer_backend/cuda_buffer_backend/: CHANGELOG.rst  cuda_buffer_plugin.xml  package.xml
cuda_buffer_backend/cuda_buffer_backend/src/: cuda_buffer_backend_plugin.cpp
cuda_buffer_backend/cuda_buffer_backend/test/: test_cuda_image_cpu_fallback_fastrtps_launch.py  test_cuda_image_mixed_no_duplicate_fastrtps_launch.py
cuda_buffer_backend/cuda_buffer_backend/test/src/: cuda_image_gpu_relay_node.cpp  cuda_image_publisher_node.cpp  cuda_image_subscriber_node.cpp
cuda_buffer_backend/cuda_buffer_backend_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cuda_buffer_backend/cuda_buffer_backend_msgs/msg/: CudaBufferDescriptor.msg
debian/: changelog  control  copyright  gbp.conf  rules
docs/: cuda_buffer_backend_design.md
include/cuda_buffer/: cuda_memory_pool.hpp  host_endpoint_manager.hpp
include/cuda_buffer_backend/: cuda_buffer_backend.hpp
include/torch_conversions/: torch_conversions.hpp
libtorch_vendor/: CHANGELOG.rst  CMakeLists.txt  libtorch_vendor-extras.cmake.in  package.xml
rpm/: ros-lyrical-cuda-buffer-backend.spec  ros-lyrical-cuda-buffer.spec  ros-lyrical-tensor-msgs.spec  ros-lyrical-torch-conversions.spec  ros-rolling-cuda-buffer-backend-msgs.spec  ros-rolling-cuda-buffer.spec  ros-rolling-libtorch-vendor.spec  ros-rolling-tensor-msgs.spec  ros-rolling-torch-conversions.spec  template.spec
src/: cuda_memory_pool.cpp
tensor_msgs/: CMakeLists.txt  package.xml
tensor_msgs/msg/: ExperimentalTensor.msg
test/: test_cuda_buffer_backend.cpp  test_cuda_image_gpu_pipeline_fastrtps_launch.py  test_cuda_image_inter_pubsub_fastrtps_launch.py  test_cuda_image_intra_pubsub_fastrtps_launch.py  test_cuda_image_mixed_pubsub_fastrtps_launch.py  test_cuda_image_multi_pub_fastrtps_launch.py  test_cuda_image_multiprocess_fastrtps_launch.py  test_torch_conversions.cpp  test_torch_tensor_multi_pub_fastrtps_launch.py
test/src/: torch_tensor_subscriber_node.cpp
torch_conversions/: README.md
torch_conversions/torch_conversions/: package.xml
torch_conversions/torch_conversions/test/: test_torch_tensor_inter_pubsub_fastrtps_launch.py  test_torch_tensor_intra_pubsub_fastrtps_launch.py  test_torch_tensor_multi_sub_fastrtps_launch.py
torch_conversions/torch_conversions/test/src/: torch_tensor_publisher_node.cpp
