<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuda_buffer</name>
  <version>0.1.0</version>
  <description>CUDA-backed rosidl::Buffer storage and synchronization utilities,
  including memory pooling, CUDA IPC support, and same-host endpoint locality
  discovery for rosidl::Buffer backends.</description>

  <maintainer email="yuankunz@nvidia.com">Yuankun Zhu</maintainer>
  <license>Apache-2.0</license>
  <author email="yuankunz@nvidia.com">Yuankun Zhu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cuda_buffer_backend_msgs</depend>
  <depend>nvidia-cuda</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosidl_buffer</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
