<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuda_buffer_backend_msgs</name>
  <version>0.1.0</version>
  <description>CUDA buffer descriptor messages for rosidl::Buffer backend serialization.</description>

  <maintainer email="yuankunz@nvidia.com">Yuankun Zhu</maintainer>
  <license>Apache-2.0</license>
  <author email="yuankunz@nvidia.com">Yuankun Zhu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
